test-suite/typecheck/pass/generic_identity.first
function id<T>(x: T) -> T { return x; }
function f() -> Int { return id(42); }
