test-suite/typecheck/fail/undefined_function.first
function f() -> Int {
  return noSuchFunction(42);
}
